tests/errors/4_type_errors/boolop-test2.ifj16.java
class Main {
    static boolean run() {
        int a = true;  // 1
    }
}
